--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,18 @@
             <artifactId>datavec-local</artifactId>
             <version>${datavec.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.6</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.arrow</groupId>
+            <artifactId>arrow-format</artifactId>
+            <version>0.17.1</version>
+        </dependency>
         <!-- before for deepLearning -->
 
         <dependency>
